# codivex-mcp-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  deny.toml  docker-compose.yml  idea.md  manual-test-checklist.md  plan.md  rust-toolchain.toml
benchmarks/: dataset-profiles.md  production-tuning-matrix.md  quality-dataset-v1.json  targets.md
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  ports.rs  projects.rs
crates/embeddings/: Cargo.toml
crates/embeddings/benches/: embedding_throughput.rs
crates/embeddings/src/: config.rs  engine.rs  lib.rs  queue.rs  worker.rs
crates/indexer/: Cargo.toml
crates/indexer/benches/: chunk_extraction.rs
crates/indexer/src/: chunking.rs  dedup.rs  fingerprint.rs  incremental.rs  lib.rs  parser_registry.rs  scanner.rs  symbol_map.rs  sync.rs  telemetry.rs  watcher.rs  worker.rs
crates/indexer/tests/: language_fixtures.rs
crates/indexer/tests/fixtures/languages/: Sample.cs  Sample.java  sample.c  sample.cpp  sample.go  sample.hs  sample.js  sample.kt  sample.php  sample.py  sample.rb  sample.swift  sample.ts
crates/mcp-code-indexer/: Cargo.toml
crates/mcp-code-indexer/src/: main.rs
crates/mcp-code-indexer/tests/: cli_integration.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: app.rs  json_rpc.rs  lib.rs  main.rs  middleware.rs  state.rs
crates/mcp-server/src/handlers/: auth.rs  mcp.rs  mcp_protocol.rs  metrics.rs  mod.rs  port_diagnostics.rs  schemas.rs  sse.rs  telemetry.rs  ws.rs
crates/mcp-server/src/services/: indexing.rs  mod.rs  search.rs
crates/mcp-server/tests/: rpc_sse_integration.rs  stdio_integration.rs
crates/search-core/: Cargo.toml
crates/search-core/benches/: fusion_logic.rs
crates/search-core/src/: fusion.rs  lexical.rs  lib.rs  retrieval.rs  vector.rs
crates/search-core/tests/: relevance_harness.rs
crates/search-core/tests/fixtures/: relevance.json
crates/ui-dioxus/: Cargo.toml
crates/ui-dioxus/src/: lib.rs  main.rs  server.rs  ui.rs
deploy/macos/: com.codivex.mcp-server.plist
docs/: cli.md  deployment.md  mcp-client-matrix.md  mcp-local-client-setup.md  project-implementation-summary.md  testing-ide.md  testing-performance.md
scripts/: install-macos.sh  run-benchmark-matrix.sh  smoke-install-cli.sh  verify-docker-runtime.sh
