[workspace]
members = [
  "crates/common",
  "crates/embeddings",
  "crates/indexer",
  "crates/mcp-code-indexer",
  "crates/mcp-server",
  "crates/search-core",
  "crates/ui-dioxus",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
