[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
common = { version = "0.1.0", path = "../common" }
dashmap = "6.1.0"
embeddings = { version = "0.1.0", path = "../embeddings" }
ignore = "0.4.25"
lru = "0.16.3"
notify = "8.2.0"
parking_lot = "0.12.5"
rayon = "1.11.0"
search-core = { version = "0.1.0", path = "../search-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tantivy = "0.25.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = "0.1.44"
tree-sitter = "0.26.5"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-haskell = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-swift = "0.7.1"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
criterion = "0.8.2"
insta = "1.46.3"
proptest = "1.10.0"
reqwest = { version = "0.13.2", features = ["json"] }

[[bench]]
name = "chunk_extraction"
harness = false
