[package]
name = "codivex-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.53", features = ["derive"] }
common = { path = "../common", version = "0.1.0" }
indexer = { path = "../indexer", version = "0.1.0" }
search-core = { path = "../search-core", version = "0.1.0" }
serde_json = "1.0.149"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
