[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[features]
default = []
rmcp-integration = ["dep:rmcp"]

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
common = { version = "0.1.0", path = "../common" }
embeddings = { version = "0.1.0", path = "../embeddings" }
futures = "0.3.32"
indexer = { version = "0.1.0", path = "../indexer" }
jsonschema = "0.42.1"
lru = "0.16.3"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
qdrant-client = "1.17.0"
schemars = "1.2.1"
search-core = { version = "0.1.0", path = "../search-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rmcp = { version = "0.16.0", optional = true, features = ["server", "transport-io", "macros"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
tree-sitter = "0.26.5"
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.8.2"
insta = "1.46.3"
proptest = "1.10.0"
tokio-tungstenite = "0.28.0"
