[package]
name = "search-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
common = { version = "0.1.0", path = "../common" }
dashmap = "6.1.0"
lru = "0.16.3"
parking_lot = "0.12.5"
qdrant-client = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tantivy = "0.25.0"
tracing = "0.1.44"

[dev-dependencies]
criterion = "0.8.2"
insta = "1.46.3"
proptest = "1.10.0"
reqwest = { version = "0.13.2", features = ["json"] }

[[bench]]
name = "fusion_logic"
harness = false
