[package]
name = "ui-dioxus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
common = { version = "0.1.0", path = "../common" }
dioxus = "0.7.3"
dioxus-logger = "0.7.3"
dioxus-router = "0.7.3"
dioxus-ssr = "0.7.3"
embeddings = { version = "0.1.0", path = "../embeddings" }
indexer = { version = "0.1.0", path = "../indexer" }
qdrant-client = "1.17.0"
reqwest = { version = "0.13.2", features = ["json"] }
search-core = { version = "0.1.0", path = "../search-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower = { version = "0.5.3", features = ["util"] }
tower-http = "0.6.8"
tracing = "0.1.44"
urlencoding = "2.1.3"

[dev-dependencies]
criterion = "0.8.2"
insta = "1.46.3"
proptest = "1.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
